<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">whizzd</string>
    <string name="res_up">Resturant</string>
    <string name="APP_ID">1587003544911228</string>
    <string name="res">Resturant</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log in</string>
    <string name="signup">Delivery Company</string>
    <string name="free">Delivery FreeLancer</string>
    <string name="resignup">Sign up as Resturant</string>
    <string name="signupresturant">Resturant</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">VSS PVT LTD.</string>
    <string name="slogan">Are you a?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="search_distance">Search Distance</string>
    <string name="logout_full">Log out of Whizd</string>
    <string name="post">Post</string>
    <string name="rate">rate</string>
    <string name="sign">Sign</string>
    <string name="activity_location_found">Location Found</string>
    <string name="namelabel">"Name : "</string>
    <string name="orderlabel">"Order : "</string>
    <string name="amountlabel">"Amount : "</string>
    <string name="addresslabel">"Address : "</string>
    <!-- Action Bar action items -->
    <string name="action_search">Sarch</string>
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_help">Help</string>
    <string name="action_add">Add</string>
    <string name="changepassword">Change Password</string>
    <string name="action_setting">Settings</string>
    <string name="action_check_updates">Check for Updates</string>

    <!-- Search -->
    <string name="search_hint">Search color..</string>
    <string name="alarm">Alarm</string>
    <string name="prompt_post">Post</string>
    <string name="prompt_phone">mobile number</string>
    <string name="prompt_branch">Enter your Branch</string>
    <string name="prompt_logintype1">login</string>
    <string name="prompt_area">Enter Area you want</string>
    <string name="prompt_address">Current Address</string>
    <string name="radio_agent">Agent</string>
    <string name="prompt_supervisor">Supervisor</string>
    <string name="radio_supervisor">Supervisor</string>
    <string name="radio_resturant">Resturant</string>
    <string name="prompt_email">Enter Email address</string>
    <string name="prompt_logintype">Agent or Supervisor or Resturant</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>
    <string name="progress_post">Posting&#8230;</string>
    <string name="settings_distance_format">%d feet</string>
    <string name="activity_post_title">Create a Post</string>
    <string name="character_count_placeholder">0/140</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_new">Add a Meal</string>
    <string name="menu_title">My Meals</string>
    <string name="meal_label">Add a Meal</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="title_activity_login">meal</string>
    <string name="resturant_order">Resturant Orders</string>
     

    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Sign up</string>
    <string name="review">Your information</string>

    <string name="label_your_name">Name</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_name">e.g. Name</string>
    <string name="hint_your_email">Optional</string>

   

    <string-array name="ratings_array">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item></item>
    </string-array>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>

</resources>