
<!-- Login form -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        style="@style/LoginFormContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/linearlayout_bg1"
            android:drawableLeft="@drawable/user"
            android:ems="10"
            android:hint="Enter your mobile number"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/linearlayout_bg1"
            android:drawableLeft="@drawable/ic_action_secure1"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/edittext_action_login"
            android:imeActionLabel="@string/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <RadioGroup
            android:id="@+id/radiotype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp" >

            <RadioButton
                android:id="@+id/radioagent"
                style="@drawable/btn_radio_on_holo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_agent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radiosupervisor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_supervisor"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioresturant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_resturant"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:textStyle="bold" />
        </RadioGroup>

        <Button
            android:id="@+id/action_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="60dp"
            android:background="@drawable/linearlayout_bg"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/login"
            android:textColor="#ffffff" />
    </LinearLayout>

</ScrollView>