<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Theme.Holo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/image2"
    tools:context=".WelcomeActivity" >

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signup_resturant"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textview_3"
        android:layout_marginTop="57dp"
        android:background="@drawable/round2"
        android:visibility="invisible"
        android:text="@string/login" />

        <Button
            android:id="@+id/signup_free"
            style="@style/DefaultButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/signup_resturant"
            android:layout_centerVertical="true"
            android:background="@drawable/linearlayout_bg1"
            android:drawableLeft="@drawable/user"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="FreeLancer"
            android:textColor="#424242" />

        <TextView
            android:id="@+id/textview_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textview_2"
            android:layout_centerHorizontal="true"
            android:text="@string/powered_by"
            android:textColor="#ffffff"
             android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textview_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="VSS TECH. PVT LTD"
             android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/signup_resturant"
            style="@style/DefaultButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/signup_free"
            android:layout_centerHorizontal="true"
            android:background="@drawable/linearlayout_bg1"
            android:drawableLeft="@drawable/user"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="Restaurant"
            android:textColor="#424242" />

        <Button
            android:id="@+id/signupw_button"
            style="@style/DefaultButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/signup_free"
            android:layout_below="@+id/signup_free"
            android:background="@drawable/linearlayout_bg1"
            android:drawableLeft="@drawable/user"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:text="Delivery Company"
            android:textColor="#424242" />

        <TextView
            android:id="@+id/textview_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/slogan"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30dp"
            android:textStyle="bold" />

</RelativeLayout>